# ewok

ewok_optimization/: CMakeLists.txt
ewok_optimization/include/ewok/: polynomial_3d_optimization.h  uniform_bspline_3d_optimization.h
ewok_optimization/rviz/: optimization_example.rviz
ewok_optimization/src/: compare_ewok.cpp
ewok_poly_spline/include/ewok/: uniform_bspline.h  uniform_bspline_3d.h
ewok_simulation/: CMakeLists.txt
